k8-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: webapp
  labels:
    app: webapp
    environment: test
    version: v1.0
spec:
  replicas: 2  # Simple test deployment with 2 replicas
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
        environment: test
        version: v1.0
    spec:
      serviceAccountName: app-admin-sa
      containers:
      - name: webapp
        image: rkazi/purr-logic:latest
        imagePullPolicy: Always  # Always pull for test environment
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        
        # Environment variables 
      restartPolicy: Always
      dnsPolicy: ClusterFirst
