k8-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: webapp
  annotations:
    spec.ingressClassName: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Use Pod IP as the target.
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix # Matches all requests starting with /
            backend:
              service:
                name: webapp-service 
                port:
                  # Port exposed by the service (Port 80)
                  number: 80
